# PySi5351A

./: README.md  requirements.txt  setup.cfg  setup.py
Si5351/: OLD__constants.py  __init__.py  clock.py  clock_defaults.py  clock_old.py  device.py  memoize.py  registers.py  registers_Si5351.py
Si5351A/: Si5351A.py  constants.py
clock/: __init__.py  clock.py  definitions.py
notebooks/: 00 - Notes.ipynb  02 - Example new code.ipynb  02 - Status.ipynb  03 - Configure.ipynb  03 - Initialize.ipynb
snail/: Si5351_wut.py  clock.py  clock_old.py  device.py  memoize.py
snail/Si5351_Clock/: __init__.py  clock.py  clock_old.py  constants.py  parameters.py  rational.py  registers.py
test/: context.py  test_bits.py  test_device.py  test_pack.py
