[metadata]
name = PySi5351A
author = Pierre V. Villeneuve
author_email = pierre.villeneuve@gmail.com
description = Si5351A helper module
long_description = file: README.md
url = https://github.com/Who8MyLunch/PySi5351A
keywords = Si5351, clock

[options]
zip_safe = True

[bdist_wheel]
universal = True

[sdist]
keep-temp = False

[clean]
all = True
