[metadata]
name = PySi5351
author = Pierre V. Villeneuve
author_email = pierre.villeneuve@gmail.com
description = Si5351 helper module
long_description = file: README.md
url = https://github.com/Who8MyLunch/PySi5351
keywords = Si5351, clock

[options]
zip_safe = True

[bdist_wheel]
universal = True

[sdist]
keep-temp = False

[clean]
all = True
