[metadata]
name = Snail
author = Pierre V. Villeneuve
author_email = pierre.villeneuve@gmail.com
description = I2C device helper module
long_description = file: README.md
url = https://github.com/Who8MyLunch/Snail
keywords = Si5351, clock, I2C, smbus2

[options]
zip_safe = True

[bdist_wheel]
universal = True

[sdist]
keep-temp = False

[clean]
all = True
